--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -1,130 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.TilePane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.HomeController"
->
+<StackPane fx:id="rootPane" prefHeight="600.0" prefWidth="724.0" stylesheets="@../styles/Home.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="your.package.MainController">
+    <AnchorPane fx:id="canvasPane" prefHeight="667.0" prefWidth="747.0" style="-fx-background-color: #F4F4F4;">
+        <children>
 
-    <!-- HEADER -->
-    <top>
-        <VBox>
-            <!-- Navigation Bar -->
-            <HBox alignment="CENTER_LEFT" spacing="30" style="-fx-padding: 10; -fx-background-color: #000000;">
-                <Label style="-fx-text-fill: white; -fx-font-size: 14;" text="HOME" />
-                <Label style="-fx-text-fill: white; -fx-font-size: 14;" text="ABOUT" />
-                <Label style="-fx-text-fill: white; -fx-font-size: 14;" text="CONTACT" />
-            </HBox>
-
-            <!-- Banner Section -->
-            <StackPane>
-                <ImageView fitHeight="200" fitWidth="800" preserveRatio="false">
-                    <image>
-                        <Image url="@../images/banner.jpg" />
-                    </image>
-                </ImageView>
-
-                <VBox alignment="CENTER" prefHeight="130.0" prefWidth="800.0" spacing="10">
-                    <Label style="-fx-font-size: 32; -fx-font-weight: bold;" text="PILIFITS" textAlignment="CENTER" textFill="#2e2e2e" translateY="15.0" />
-               <Button mnemonicParsing="false" text="&gt;">
-                  <VBox.margin>
-                     <Insets bottom="-50.0" right="-700.0" />
-                  </VBox.margin>
-               </Button>
-               <Button mnemonicParsing="false" text="&lt;">
-                  <VBox.margin>
-                     <Insets bottom="28.0" right="700.0" />
-                  </VBox.margin>
-               </Button>
-                    <Button fx:id="generateFitBtn" style="-fx-background-color: white; -fx-text-fill: black;" text="✨ GENERATE FIT" translateY="-30.0" />
-
-                    <!-- Tab Navigation -->
-                    <HBox alignment="CENTER" spacing="40">
-                        <ToggleButton fx:id="closetTabBtn" selected="true" text="CLOSET" translateY="-20.0" />
-                        <ToggleButton fx:id="collectionsTabBtn" text="COLLECTIONS" translateY="-20.0" />
-                    </HBox>
-               <padding>
-                  <Insets bottom="13.0" top="12.0" />
-               </padding>
-                </VBox>
-            </StackPane>
-        </VBox>
-    </top>
-
-    <!-- MAIN CONTENT AREA -->
-    <center>
-        <TabPane fx:id="mainTabPane" tabClosingPolicy="UNAVAILABLE">
-            <!-- Closet Tab -->
-            <Tab text="Closet">
-                <VBox alignment="TOP_CENTER" spacing="20" style="-fx-padding: 20;">
-                    <!-- Filters -->
-                    <HBox spacing="15">
-                        <Button style="-fx-background-radius: 20; -fx-background-color: #333; -fx-text-fill: white;" text="CATEGORY" />
-                        <Button style="-fx-background-radius: 20; -fx-background-color: #333; -fx-text-fill: white;" text="STYLE" />
-                        <Button style="-fx-background-radius: 20; -fx-background-color: #333; -fx-text-fill: white;" text="COLOR" />
-                        <Button style="-fx-background-radius: 20; -fx-background-color: #333; -fx-text-fill: white;" text="FAVORITES" />
-                    </HBox>
-
-                    <!-- Item Grid Placeholder -->
-                    <TilePane alignment="CENTER" hgap="20" prefColumns="3" vgap="20">
-                  <ScrollBar orientation="VERTICAL" translateX="-300.0">
-                     <TilePane.margin>
-                        <Insets />
-                     </TilePane.margin>
-                  </ScrollBar>
-                        <VBox alignment="CENTER" spacing="10" style="-fx-background-color: #1e1e1e; -fx-padding: 20;" translateX="-300.0">
-                            <ImageView fitHeight="60" fitWidth="60">
-                                <image>
-                                    <Image url="@../images/add_icon.png" />
-                                </image>
-                            </ImageView>
-                            <Label style="-fx-text-fill: white;" text="ADD NEW PIECE" />
-                        </VBox>
-                    </TilePane>
-                </VBox>
-            </Tab>
-
-            <!-- Generate Tab -->
-            <Tab text="Style">
-                <AnchorPane>
-                    <Label layoutX="30" layoutY="30" text="Generate Tab Content Here" />
-                </AnchorPane>
-            </Tab>
-            <!-- Generate Tab -->
-            <Tab text="Favorites">
-                <AnchorPane>
-                    <Label layoutX="30" layoutY="30" text="Generate Tab Content Here" />
-                </AnchorPane>
-            </Tab>
-
-            <!-- Collections Tab -->
-            <Tab text="Color">
-                <AnchorPane>
-                    <Label layoutX="30" layoutY="30" text="Collections Tab Content Here" />
-                </AnchorPane>
-            </Tab>
-        </TabPane>
-    </center>
-
-
-
-    <!-- FOOTER -->
-    <bottom>
-        <HBox alignment="CENTER" style="-fx-background-color: #2c2c2c; -fx-padding: 10;">
-            <Label style="-fx-text-fill: white;" text="© 2025 PiliFits" />
-        </HBox>
-    </bottom>
-</BorderPane>
+            <AnchorPane layoutX="-1.0" layoutY="-3.0" prefHeight="246.0" prefWidth="715.0">
+                <children>
+                    <AnchorPane layoutX="295.0" layoutY="47.0" prefHeight="34.0" prefWidth="200.0" />
+                    <ImageView fitHeight="259.0" fitWidth="748.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" styleClass="preview-border">
+                  <image>
+                     <Image url="@../../../../../../../../../Downloads/bg.png.png" />
+                  </image>
+                    </ImageView>
+                      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="280.0" layoutY="81.0" prefHeight="42.0" prefWidth="200.0" text="PILIFITS" textAlignment="CENTER" textFill="#fffafa">
+                          <font>
+                              <Font name="Arial" size="46.0" />
+                          </font>
+                      </Label>
+                    <Button contentDisplay="CENTER" layoutX="305.0" layoutY="135.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="icon-button" text="GENERATE FIT" textAlignment="CENTER" textFill="WHITE">
+                  <font>
+                     <Font name="System Bold" size="13.0" />
+                  </font></Button>
+               <Label layoutX="20.0" layoutY="14.0" text="HOME" textFill="WHITE">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font>
+               </Label>
+               <Label layoutX="68.0" layoutY="14.0" text="CONTACT" textFill="WHITE">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font>
+               </Label>
+               <Label layoutX="140.0" layoutY="14.0" text="ABOUT" textFill="WHITE">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font>
+               </Label>
+               <Label alignment="CENTER" contentDisplay="CENTER" layoutX="190.0" layoutY="201.0" prefHeight="18.0" prefWidth="219.0" text="CLOSET" textAlignment="CENTER" textFill="WHITE">
+                  <font>
+                     <Font name="Arial Black" size="12.0" />
+                  </font>
+               </Label>
+               <Label layoutX="400.0" layoutY="202.0" text="COLLECTIONS" textFill="WHITE">
+                  <font>
+                     <Font name="System Bold" size="12.0" />
+                  </font>
+               </Label>
+               <AnchorPane layoutX="3.0" layoutY="1.0" prefHeight="42.0" prefWidth="739.0" />
+                </children>
+            </AnchorPane>
+         <MenuButton fx:id="categoryDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" contentDisplay="CENTER" layoutX="193.0" layoutY="256.0" prefHeight="18.0" prefWidth="94.0" styleClass="drop-select" text="CATEGORY">
+            <font>
+               <Font size="9.0" />
+            </font>
+         </MenuButton>
+         <MenuButton fx:id="categoryDropdown1" accessibleRole="COMBO_BOX" alignment="CENTER" contentDisplay="CENTER" layoutX="298.0" layoutY="256.0" prefHeight="31.0" prefWidth="87.0" styleClass="drop-select" text="STYLE">
+            <font>
+               <Font size="9.0" />
+            </font>
+         </MenuButton>
+         <MenuButton fx:id="categoryDropdown11" accessibleRole="COMBO_BOX" alignment="CENTER" contentDisplay="CENTER" layoutX="396.0" layoutY="256.0" prefHeight="31.0" prefWidth="79.0" styleClass="drop-select" text="COLOR">
+            <font>
+               <Font size="9.0" />
+            </font>
+         </MenuButton>
+         <Button layoutX="484.0" layoutY="255.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="73.0" styleClass="drop-select" text="FAVORITES" />
+         <GridPane layoutX="69.0" layoutY="300.0" prefHeight="270.0" prefWidth="626.0">
+           <columnConstraints>
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.4000244140625" minWidth="10.0" prefWidth="132.4000244140625" />
+               <ColumnConstraints hgrow="SOMETIMES" maxWidth="121.20001220703125" minWidth="10.0" prefWidth="119.5999755859375" />
+           </columnConstraints>
+           <rowConstraints>
+             <RowConstraints maxHeight="109.6000244140625" minHeight="10.0" prefHeight="92.7999755859375" vgrow="SOMETIMES" />
+             <RowConstraints maxHeight="127.19998779296874" minHeight="0.0" prefHeight="96.00002441406251" vgrow="SOMETIMES" />
+             <RowConstraints maxHeight="161.60001220703126" minHeight="10.0" prefHeight="81.60003662109375" vgrow="SOMETIMES" />
+           </rowConstraints>
+            <children>
+               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#161718" height="100.0" stroke="BLACK" strokeType="INSIDE" width="124.0" />
+               <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" prefHeight="106.0" prefWidth="124.0" text="ADD NEW PIECE" textAlignment="CENTER" textFill="WHITE">
+                  <font>
+                     <Font name="System Bold" size="9.0" />
+                  </font>
+               </Label>
+               <AnchorPane prefHeight="99.0" prefWidth="126.0" />
+            </children>
+         </GridPane>
+         <Slider layoutX="33.0" layoutY="337.0" orientation="VERTICAL" prefHeight="231.0" prefWidth="26.0">
+            <styleClass>
+               <String fx:value="black-slider" />
+               <String fx:value="thumb" />
+               <String fx:value="track" />
+               <String fx:value="axis" />
+            </styleClass>
+         </Slider>
+        </children>
+    </AnchorPane>
+</StackPane>
