--- a/src/main/resources/com/example/pilifitproject/view/AboutUs2.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/AboutUs2.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane prefHeight="432.0" prefWidth="720.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.HomeController">
+<AnchorPane prefHeight="432.0" prefWidth="720.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.AboutController">
     <children>
         <ImageView fitHeight="441.0" fitWidth="730.0" layoutY="-9.0" pickOnBounds="true">
             <image>
