--- a/src/main/resources/com/example/pilifitproject/view/Contact.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Contact.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="707.0" prefWidth="1392.0" stylesheets="@../styles/Contact.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="707.0" prefWidth="1392.0" styleClass="image-holder" stylesheets="@../styles/Contact.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -78,7 +78,7 @@
                                     </Text>
                                  </children>
                               </Pane>
-                              <GridPane layoutX="752.0" layoutY="7.0" prefHeight="553.0" prefWidth="398.0">
+                              <GridPane layoutX="752.0" layoutY="7.0" prefHeight="553.0" prefWidth="398.0" styleClass="image-holder">
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                                  </columnConstraints>
@@ -127,11 +127,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <AnchorPane prefHeight="157.0" prefWidth="449.0" GridPane.columnIndex="1">
+                  <AnchorPane prefHeight="157.0" prefWidth="449.0" styleClass="image-holder" GridPane.columnIndex="1">
+
                      <children>
                         <ImageView fitHeight="103.0" fitWidth="193.0" layoutX="181.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true" styleClass="image-holder" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="147.6666717529297" AnchorPane.topAnchor="36.0">
                            <image>
-                              <Image url="@../../../../../../../../../Downloads/469565416_122109809246643454_5833764473841954454_n.jpg" />
+                              <Image url="@../images/background/bg.png" />
                            </image>
                         </ImageView>
                      </children>
