--- a/src/main/resources/com/example/pilifitproject/view/AboutUs2.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/AboutUs2.fxml
@@ -7,119 +7,108 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="432.0" prefWidth="720.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.AboutController">
-    <children>
-        <ImageView fitHeight="441.0" fitWidth="730.0" layoutY="-9.0" pickOnBounds="true">
-            <image>
-                <Image url="@../../../../../../../../../Downloads/contact%20bg.jpg" />
-            </image>
-        </ImageView>
-        <Pane layoutY="-4.0" prefHeight="441.0" prefWidth="730.0" style="-fx-background-color: #ACAEB3;">
-            <styleClass>
-                <String fx:value="-fx-background-radius: 15;" />
-                <String fx:value="-fx-padding: 10;" />
-            </styleClass>
-            <children>
-            <VBox layoutX="37.0" layoutY="265.0" prefHeight="162.0" prefWidth="180.0" style="-fx-background-color: BLACK;" styleClass="border-pad" stylesheets="@../styles/AboutUs.css">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="707.0" prefWidth="1392.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <AnchorPane prefHeight="707.0" prefWidth="1392.0" style="-fx-background-color: BLACK;" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="707.0" fitWidth="1392.0" opacity="0.65" pickOnBounds="true">
+               <image>
+                  <Image url="@../../../../../../../../../../Downloads/IMG_1441%20(1).png" />
+               </image>
+            </ImageView>
+            <GridPane alignment="CENTER" layoutX="-6.0" layoutY="78.0" prefHeight="206.0" prefWidth="1390.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="27.0" prefWidth="213.0" text="GOAL" textAlignment="CENTER" textFill="WHITE">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="119.0" prefWidth="463.0" text="PILIFITS" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1">
+                     <font>
+                        <Font size="92.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets top="15.0" />
+                     </GridPane.margin>
                   </Label>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In lobortis orci mattis sapien pretium luctus. Suspendisse condimentum faucibus ex in bibendum. Etiam sagittis eros massa." textAlignment="JUSTIFY" wrappingWidth="179.5433349609375">
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-                     </VBox.margin>
-                  </Text>
                </children>
-            </VBox>
-              <VBox layoutX="37.0" layoutY="118.0" prefHeight="136.0" prefWidth="654.0" style="-fx-background-color: BLACK;" stylesheets="@../styles/AboutUs.css">
-                  <children>
-                      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="28.0" prefWidth="641.0" text="ABOUT US" textAlignment="CENTER" textFill="WHITE">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </Label>
-                  <Text fill="#fcf9f9" strokeType="OUTSIDE" strokeWidth="0.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pharetra ut nulla sit amet egestas. Ut facilisis ac purus a condimentum. Aliquam nec tempus eros. Quisque auctor nec sem vel dapibus. Phasellus ultricies lectus ipsum, ut facilisis risus posuere accumsan. Quisque tristique accumsan augue, quis accumsan lectus tristique quis. In ac orci volutpat enim vestibulum fringilla vel eu arcu. Suspendisse lacinia convallis arcu non porta." textAlignment="JUSTIFY" wrappingWidth="620.5367197990417">
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-                     </VBox.margin>
-                  </Text>
-                  </children>
+            </GridPane>
+            <Pane prefHeight="66.0" prefWidth="1392.0" style="-fx-background-color: black;">
+               <children>
+                  <Button blendMode="ADD" layoutX="10.0" layoutY="5.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="133.0" style="-fx-background-color: BLACK;" text="HOME" textFill="WHITE">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                  </Button>
+                  <Button blendMode="ADD" layoutX="137.0" layoutY="4.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="133.0" style="-fx-background-color: BLACK;" text="ABOUT" textFill="WHITE">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                  </Button>
+                  <Button blendMode="ADD" layoutX="254.0" layoutY="2.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="175.0" style="-fx-background-color: BLACK;" text="CONTACT" textFill="WHITE">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                  </Button>
+               </children>
+            </Pane>
+            <VBox layoutX="36.0" layoutY="186.0" prefHeight="500.0" prefWidth="562.0" style="-fx-background-color: black;" stylesheets="@../styles/AboutUs.css">
                <styleClass>
-                  <String fx:value=".border-pad {" />
                   <String fx:value="border-pad" />
+                  <String fx:value="tab-border" />
                </styleClass>
-              </VBox>
-            <VBox layoutX="258.0" layoutY="265.0" prefHeight="118.0" prefWidth="201.0" style="-fx-background-color: BLACK;" styleClass="border-pad" stylesheets="@../styles/AboutUs.css">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="27.0" prefWidth="213.0" text="CREATORS" textAlignment="CENTER" textFill="WHITE">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="74.0" prefWidth="1126.0" text="ABOUT US" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
                   </Label>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In lobortis orci mattis sapien pretium luctus. Suspendisse condimentum faucibus ex in bibendum. Etiam sagittis eros massa." textAlignment="JUSTIFY" wrappingWidth="179.5433349609375">
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-                     </VBox.margin>
-                  </Text>
                </children>
             </VBox>
-            <VBox layoutX="477.0" layoutY="265.0" prefHeight="118.0" prefWidth="201.0" style="-fx-background-color: BLACK;" styleClass="border-pad" stylesheets="@../styles/AboutUs.css">
+            <VBox layoutX="621.0" layoutY="186.0" prefHeight="198.0" prefWidth="350.0" style="-fx-background-color: black;" stylesheets="@../styles/AboutUs.css">
+               <styleClass>
+                  <String fx:value="border-pad" />
+                  <String fx:value="tab-border" />
+               </styleClass>
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="27.0" prefWidth="213.0" text="WELCOME" textAlignment="CENTER" textFill="WHITE">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="36.0" prefWidth="326.0" text="GOAL" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
                   </Label>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In lobortis orci mattis sapien pretium luctus. Suspendisse condimentum faucibus ex in bibendum. Etiam sagittis eros massa." textAlignment="JUSTIFY" wrappingWidth="179.5433349609375">
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-                     </VBox.margin>
-                  </Text>
                </children>
             </VBox>
-              <GridPane layoutY="45.0" prefHeight="112.0" prefWidth="730.0">
-                  <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.0" minWidth="10.0" prefWidth="244.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.0" minWidth="10.0" prefWidth="261.1999755859375" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="461.0" minWidth="10.0" prefWidth="226.00002441406252" />
-                  </columnConstraints>
-                  <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="35.39999999999999" minHeight="10.0" prefHeight="32.19998779296874" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="40.800000000000004" minHeight="10.0" prefHeight="25.000012207031247" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="21.79998779296875" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="23.39999999999999" minHeight="1.6000122070312415" prefHeight="20.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  </rowConstraints>
-                  <children>
-                      <Label alignment="CENTER" prefHeight="90.0" prefWidth="255.0" text="PILIFITS" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                          <font>
-                              <Font size="62.0" />
-                          </font>
-                      </Label>
-                  </children>
-              </GridPane>
-            </children>
-        </Pane>
-        <HBox prefHeight="26.0" prefWidth="730.0" style="-fx-background-color: black;">
-            <children>
-                <Button mnemonicParsing="false" onAction="#goHome" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: black;" text="HOME" textFill="#c6c2c2" />
-                <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#goAbout" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: black;" text="ABOUT" textFill="#c6c2c2" />
-                <Button layoutX="82.0" layoutY="10.0" mnemonicParsing="false" onAction="#goContact" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: black;" text="CONTACT" textFill="#c6c2c2" />
-            </children>
-        </HBox>
-    </children>
-</AnchorPane>
+            <VBox layoutX="1002.0" layoutY="187.0" prefHeight="198.0" prefWidth="350.0" style="-fx-background-color: black;" stylesheets="@../styles/AboutUs.css">
+               <styleClass>
+                  <String fx:value="border-pad" />
+                  <String fx:value="tab-border" />
+               </styleClass>
+               <children>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="41.0" prefWidth="326.0" text="CREATORS" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </children>
+      </AnchorPane>
+   </top>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </center>
+</BorderPane>
