--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -32,7 +32,7 @@
                             <Font name="Arial" size="46.0" />
                         </font>
                     </Label>
-                    <Button contentDisplay="CENTER" layoutX="305.0" layoutY="135.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="icon-button" text="GENERATE FIT" textAlignment="CENTER" textFill="WHITE">
+                    <Button fx:id="GenerateFitBtn" contentDisplay="CENTER" layoutX="305.0" layoutY="135.0" mnemonicParsing="false" onAction="#handleGenerateButtonAction" prefHeight="34.0" prefWidth="150.0" styleClass="icon-button" text="GENERATE FIT" textAlignment="CENTER" textFill="WHITE">
                         <font>
                             <Font name="System Bold" size="13.0" />
                         </font></Button>
