--- a/src/main/resources/com/example/pilifitproject/styles/Closet.css
+++ b/src/main/resources/com/example/pilifitproject/styles/Closet.css
@@ -1,6 +1,6 @@
 .icon-button {
-    -fx-background-color: transparent;
-    -fx-border-color: black;
+    -fx-background-color: #d9d9d9;
+    -fx-border-color: transparent;
     -fx-border-radius: 8;
     -fx-border-width: 2px;
     -fx-background-radius: 8;
@@ -9,13 +9,20 @@
     -fx-cursor: hand;
 }
 
-.icon-button:hover {
-    -fx-background-color: lightgray;
-
+.heart-bin {
+    -fx-background-color: #d9d9d9;
+    -fx-background-image: "@../images/others/DeleteBin.png";
+    -fx-border-color: transparent;
+    -fx-border-radius: 8;
+    -fx-border-width: 2px;
+    -fx-background-radius: 8;
+    -fx-padding: 5 10;
+    -fx-font-size: 8px;
+    -fx-cursor: hand;
 }
 
 .title-text {
-    -fx-font-size: 20px;
+    -fx-font-size: 18px;
     -fx-font-weight: bold;
 }
 
@@ -57,9 +64,9 @@
     -fx-background-color: white;
     -fx-background-radius: 15;
     -fx-border-radius: 15;
-    -fx-border-color: black;
+    -fx-border-color: transparent;
     -fx-border-width: 2px;
-    -fx-padding: 10;
+    -fx-padding: 5 ;
 }
 
 
@@ -67,11 +74,21 @@
     -fx-background-color: #f5f5f5;
     -fx-text-fill: black;
     -fx-font-size: 12px;
+    -fx-font-weight: bold;
     -fx-font-family: "System Bold";
     -fx-background-radius: 100%;
-    -fx-border-color: black;
+    -fx-border-color: transparent;
     -fx-border-width: 2px;
     -fx-border-radius: 100%;
     -fx-pref-width: 20px;
     -fx-pref-height: 20px;
+}
+
+.close-button: hover {
+    -fx-background-color: #F75D59;
+}
+
+.image-holder {
+    -fx-background-color: #d9d9d9;
+    -fx-border-color: transparent;
 }
