--- a/src/main/resources/com/example/pilifitproject/styles/Home.css
+++ b/src/main/resources/com/example/pilifitproject/styles/Home.css
@@ -1,20 +1,29 @@
 .icon-button {
     -fx-background-color: linear-gradient(from 5% 0% to 99% 100%, white, black);
     -fx-border-color: black;
-    -fx-border-radius: 15px;
+    -fx-border-radius: 20px;
     -fx-border-width: 2px;
-    -fx-background-radius: 15px;
-    -fx-padding: 5 10;
+    -fx-background-radius: 20px;
+    -fx-padding: 5 10px;
+    -fx-pref-height: 45px;
     -fx-cursor: hand;
+    -fx-font-size:18px;
+    -fx-font-weight: bold;
     -fx-text-fill: white;
+}
+.icon-button: hover {
+    -fx-background-color: #ffffff55;
 }
 
 .scene-switch {
     -fx-background-color: transparent;
+    -fx-font-weight: bold;
+    -fx-text-fill:white;
+    -fx-cursor: hand;
 }
 
 .scene-switch:hover {
-    -fx-background-color: lightgray;
+     -fx-text-fill: #ffffff55;
 
 }
 .preview-border {
@@ -32,6 +41,7 @@
     -fx-padding: 5 10;
     -fx-font-size: 8px;
     -fx-cursor: hand;
+    -fx-box-shadow: 5px 10px;
 }
 
 .drop-select:hover {
@@ -74,5 +84,11 @@
 
 .add-item {
     -fx-background-color: transparent;
+    -fx-text-fill: white;
+    -fx-cursor: hand;
+}
+
+.add-item:hover {
+    -fx-text-fill: #ffffff55;
 }
 
